mudança no preço da bike

--- a/carros e bicicletas.html
+++ b/carros e bicicletas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carros e Bicicletas </title>
-    <link rel="stylesheet" href="/Users/Dell/OneDrive/Documentos/LUCY/HTML E CSS INICIANTES/stylescarrosebicicletas.css">
+    <link rel="stylesheet" href="./stylescarrosebicicletas.css">
   </head>
   <body>
     <h1>Carros e Bicicletas</h1>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="item">
-      <h2>Bicicleta: <span>R$ 199,00</span> </h2>
+      <h2>Bicicleta: <span>R$ 399,00</span> </h2>
       <p>Bicicleta modelo <span>2050</span>, com <span>20km</span> rodados.</p>
       <a href="/">Comprar Bicicleta</a>
     </div>
